@@ -12,7 +12,7 @@ BEGIN {$SIG{__WARN__} = sub { die "Terminating test due to warning: $_[0]" } };
 
 use Test;
 use Devel::Peek;
-BEGIN { plan tests => 59 };
+BEGIN { plan tests => 61 };
 use Search::Xapian qw(:standard);
 ok(1); # If we made it this far, we're ok.
 
@@ -92,10 +92,14 @@ my $vrp2 = new Search::Xapian::NumberValueRangeProcessor(2);
 my $vrp3 = new Search::Xapian::StringValueRangeProcessor(3);
 my $vrp4 = new Search::Xapian::NumberValueRangeProcessor(4, '$');
 my $vrp5 = new Search::Xapian::NumberValueRangeProcessor(5, 'kg', 0);
+my $vrp6 = new Search::Xapian::StringValueRangeProcessor(6, 'country:');
+my $vrp7 = new Search::Xapian::StringValueRangeProcessor(7, ':name', 0);
 $qp->add_valuerangeprocessor( $vrp1 );
 $qp->add_valuerangeprocessor( $vrp2 );
 $qp->add_valuerangeprocessor( $vrp4 );
 $qp->add_valuerangeprocessor( $vrp5 );
+$qp->add_valuerangeprocessor( $vrp6 );
+$qp->add_valuerangeprocessor( $vrp7 );
 $qp->add_valuerangeprocessor( $vrp3 );
 
 $qp->add_boolean_prefix("test", "XTEST");
@@ -115,6 +119,8 @@ foreach $pair (
     [ '12/03/99..12/04/01', '0 * VALUE_RANGE 1 19990312 20010412' ],
     [ '03-12-99..04-14-01', '0 * VALUE_RANGE 1 19990312 20010414' ],
     [ '(test:a..test:b hello)', '(hello@1 FILTER VALUE_RANGE 3 test:a test:b)' ],
+    [ 'country:chile..denmark', '0 * VALUE_RANGE 6 chile denmark' ],
+    [ 'albert..xeni:name', '0 * VALUE_RANGE 7 albert xeni' ],
     ) {
     my ($str, $res) = @{$pair};
     my $query = $qp->parse_query($str);
